--- a/HotelManagementSystem/MainWindow.xaml
+++ b/HotelManagementSystem/MainWindow.xaml
@@ -5,8 +5,93 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HotelManagementSystem"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Prijava" WindowState="Maximized" Background="White">
 
+    <Window.Resources>
+        <Style x:Key="ModernButton" TargetType="Button">
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#BCE954"/>
+                    <Setter Property="BorderBrush" Value="#806517"/>
+                </Trigger>
+            </Style.Triggers>
+
+            <Setter Property="Background" Value="#617C58"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="Margin" Value="0,30"/>
+            <Setter Property="Padding" Value="10"/>
+            <Setter Property="BorderBrush" Value="#806517"/>
+            <Setter Property="BorderThickness" Value="2"/>
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="20">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="ModernTextBox" TargetType="TextBox">
+            <Setter Property="Width" Value="250"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="7"/>
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="BorderBrush" Value="#806517"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="Margin" Value="0,10"/>
+        </Style>
+
+        <Style x:Key="ModernPasswordBox" TargetType="PasswordBox">
+            <Setter Property="Width" Value="250"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="7"/>
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="BorderBrush" Value="#806517"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="Margin" Value="0,10"/>
+        </Style>
+    </Window.Resources>
+
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+
+        <Border BorderBrush="#348017" BorderThickness="2" CornerRadius="10" Padding="10" Grid.Column="0" Margin="100">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="350">
+                <TextBlock Text="Prijavite se da biste pristupili sistemu" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,40" Foreground="#806517" />
+                <TextBlock Text="Korisničko ime" FontSize="14" HorizontalAlignment="Center" Margin="0,5"/>
+                <TextBox x:Name="UsernameTextBox" Style="{StaticResource ModernTextBox}" TextAlignment="Left"/>
+                <TextBlock Text="Lozinka" FontSize="14" HorizontalAlignment="Center" Margin="0,5"/>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="40" />
+                    </Grid.ColumnDefinitions>
+                    <PasswordBox x:Name="PasswordBox" Style="{StaticResource ModernPasswordBox}" Width="250" Margin="40,0,0,0" PasswordChanged="PasswordBox_PasswordChanged"/>
+                    <TextBox x:Name="PasswordTextBox" Style="{StaticResource ModernTextBox}" Margin="40,0,0,0" Visibility="Collapsed" Width="250"/>
+                    <Image x:Name="EyeIcon" MouseDown="EyeIcon_MouseDown" 
+                           Source="Resources/otvoreno_oko.png" Width="40" Height="40" Grid.Column="1"/>
+                </Grid>
+                <Button Content="Prijavi se" Style="{StaticResource ModernButton}"/>
+            </StackPanel>
+        </Border>
+
+        <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <TextBlock Text="Hotel Management System" FontSize="30" FontWeight="Bold" HorizontalAlignment="Left" Foreground="#806517"/>
+        </StackPanel>
     </Grid>
 </Window>
