--- a/HotelManagementSystem/Meni.xaml
+++ b/HotelManagementSystem/Meni.xaml
@@ -36,29 +36,32 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
 
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20">
-                        <Border BorderThickness="2" BorderBrush="#617C58" Background="#99C68E" Padding="20" CornerRadius="10" Margin="10" Width="Auto" Height="Auto">
-                            <StackPanel>
-                                <TextBlock Text="Ukupan broj soba" FontSize="18" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
-                                <TextBlock Text="50" FontSize="32" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
-                            </StackPanel>
-                        </Border>
+                    <Border BorderThickness="2" BorderBrush="#617C58" Background="#99C68E" Padding="30" CornerRadius="10" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
+                        <StackPanel>
+                            <TextBlock Text="Ukupan broj soba" FontSize="18" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
+                            <TextBlock Text="50" FontSize="32" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
+                        </StackPanel>
+                    </Border>
 
-                        <Border BorderThickness="2" BorderBrush="#617C58" Background="#99C68E" Padding="20" CornerRadius="10" Margin="10" Width="Auto" Height="Auto">
-                            <StackPanel>
-                                <TextBlock Text="Ukupan broj gostiju" FontSize="18" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
-                                <TextBlock Text="120" FontSize="32" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
-                            </StackPanel>
-                        </Border>
+                    <Border Grid.Column="1" BorderThickness="2" BorderBrush="#617C58" Background="#99C68E" Padding="30" CornerRadius="10" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
+                        <StackPanel>
+                            <TextBlock Text="Ukupan broj gostiju" FontSize="18" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
+                            <TextBlock Text="120" FontSize="32" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
+                        </StackPanel>
+                    </Border>
 
-                        <Border BorderThickness="2" BorderBrush="#617C58" Background="#99C68E" Padding="20" CornerRadius="10" Margin="10" Width="Auto" Height="Auto">
-                            <StackPanel>
-                                <TextBlock Text="Ukupan broj zaposlenih" FontSize="18" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
-                                <TextBlock Text="15" FontSize="32" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
-                            </StackPanel>
-                        </Border>
-                    </StackPanel>
+                    <Border Grid.Column="2" BorderThickness="2" BorderBrush="#617C58" Background="#99C68E" Padding="30" CornerRadius="10" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
+                        <StackPanel>
+                            <TextBlock Text="Ukupan broj zaposlenih" FontSize="18" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
+                            <TextBlock Text="15" FontSize="32" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
+                        </StackPanel>
+                    </Border>
                 </Grid>
             </TabItem>
 
@@ -67,7 +70,65 @@
             </TabItem>
             
             <TabItem Header="Gosti">
-                <TextBlock Text="Guests Content" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="24" Foreground="Black"/>
+                <Grid Margin="20">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+                        <Button x:Name="Button_dodaj" Content="Dodaj" Width="100" Margin="5" Style="{StaticResource ModernButton}" />
+                        <Button x:Name="Button_pretrazi" Content="Pretraži" Width="100" Margin="5" Style="{StaticResource ModernButton}" />
+                        <Button x:Name="Button_izmeni" Content="Izmeni" Width="100" Margin="5" Style="{StaticResource ModernButton}" />
+                        <Button x:Name="Button_obrisi" Content="Obriši" Width="100" Margin="5" Style="{StaticResource ModernButton}" />
+                    </StackPanel>
+
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <TextBlock >Ime</TextBlock>
+                        <TextBlock Grid.Column="1" >Prezime</TextBlock>
+                        <TextBlock Grid.Column="2">Pol</TextBlock>
+                        <TextBlock Grid.Column="3">Telefon</TextBlock>
+                        <TextBlock Grid.Column="4">Državljanstvo</TextBlock>
+                        <TextBlock Grid.Column="5">Pasoš</TextBlock>
+                        <TextBlock Grid.Column="6">Lična karta</TextBlock>
+
+                        <TextBox x:Name="TextBox_ime" Grid.Row="1" Width="150" Style="{StaticResource ModernTextBox}" />
+                        <TextBox x:Name="TextBox_prezime" Grid.Row="1" Grid.Column="1" Width="150" Style="{StaticResource ModernTextBox}" />
+                        <TextBox x:Name="TextBox_pol" Grid.Row="1" Grid.Column="2" Width="150" Style="{StaticResource ModernTextBox}" />
+                        <TextBox x:Name="TextBox_telefon" Grid.Row="1" Grid.Column="3" Width="150" Style="{StaticResource ModernTextBox}" />
+                        <TextBox x:Name="TextBox_drzavljanstvo" Grid.Row="1" Grid.Column="4" Width="150" Style="{StaticResource ModernTextBox}" />
+                        <TextBox x:Name="TextBox_pasos" Grid.Row="1" Grid.Column="5" Width="150" Style="{StaticResource ModernTextBox}" />
+                        <TextBox x:Name="TextBox_licna" Grid.Row="1" Grid.Column="6" Width="150" Style="{StaticResource ModernTextBox}" />
+                    </Grid>
+
+                    <DataGrid Grid.Row="3" CanUserReorderColumns="False" CanUserResizeColumns="False" Margin="10">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="ID"  Width="*" />
+                            <DataGridTextColumn Header="Ime"  Width="*" />
+                            <DataGridTextColumn Header="Prezime"  Width="*" />
+                            <DataGridTextColumn Header="Pol"  Width="*" />
+                            <DataGridTextColumn Header="Telefon"  Width="*" />
+                            <DataGridTextColumn Header="Državljanstvo"  Width="*" />
+                            <DataGridTextColumn Header="Pasoš"  Width="*" />
+                            <DataGridTextColumn Header="Lična karta"  Width="*" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </Grid>
             </TabItem>
 
             <TabItem Header="Rezervacije">
