--- a/HotelManagementSystem/Meni.xaml
+++ b/HotelManagementSystem/Meni.xaml
@@ -45,21 +45,21 @@
                     <Border BorderThickness="2" BorderBrush="#617C58" Background="#99C68E" Padding="30" CornerRadius="10" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
                         <StackPanel>
                             <TextBlock Text="Ukupan broj soba" FontSize="18" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
-                            <TextBlock Text="50" FontSize="32" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
+                            <TextBlock Text="50" FontSize="32" Foreground="#806517" FontWeight="Bold" TextAlignment="Center" />
                         </StackPanel>
                     </Border>
 
                     <Border Grid.Column="1" BorderThickness="2" BorderBrush="#617C58" Background="#99C68E" Padding="30" CornerRadius="10" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
                         <StackPanel>
                             <TextBlock Text="Ukupan broj gostiju" FontSize="18" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
-                            <TextBlock Text="120" FontSize="32" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
+                            <TextBlock Text="120" FontSize="32" Foreground="#806517" FontWeight="Bold" TextAlignment="Center" />
                         </StackPanel>
                     </Border>
 
                     <Border Grid.Column="2" BorderThickness="2" BorderBrush="#617C58" Background="#99C68E" Padding="30" CornerRadius="10" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
                         <StackPanel>
                             <TextBlock Text="Ukupan broj zaposlenih" FontSize="18" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
-                            <TextBlock Text="15" FontSize="32" Foreground="White" FontWeight="Bold" TextAlignment="Center" />
+                            <TextBlock Text="15" FontSize="32" Foreground="#806517" FontWeight="Bold" TextAlignment="Center" />
                         </StackPanel>
                     </Border>
                 </Grid>
@@ -160,13 +160,13 @@
                         <TextBlock Grid.Column="5">Pasoš</TextBlock>
                         <TextBlock Grid.Column="6">Lična karta</TextBlock>
 
-                        <TextBox x:Name="TextBox_ime" Grid.Row="1" Width="150" Style="{StaticResource ModernTextBox}" />
-                        <TextBox x:Name="TextBox_prezime" Grid.Row="1" Grid.Column="1" Width="150" Style="{StaticResource ModernTextBox}" />
-                        <TextBox x:Name="TextBox_pol" Grid.Row="1" Grid.Column="2" Width="150" Style="{StaticResource ModernTextBox}" />
-                        <TextBox x:Name="TextBox_telefon" Grid.Row="1" Grid.Column="3" Width="150" Style="{StaticResource ModernTextBox}" />
-                        <TextBox x:Name="TextBox_drzavljanstvo" Grid.Row="1" Grid.Column="4" Width="150" Style="{StaticResource ModernTextBox}" />
-                        <TextBox x:Name="TextBox_pasos" Grid.Row="1" Grid.Column="5" Width="150" Style="{StaticResource ModernTextBox}" />
-                        <TextBox x:Name="TextBox_licna" Grid.Row="1" Grid.Column="6" Width="150" Style="{StaticResource ModernTextBox}" />
+                        <TextBox x:Name="TextBox_ime" Grid.Row="1" Width="150" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Left" />
+                        <TextBox x:Name="TextBox_prezime" Grid.Row="1" Grid.Column="1" Width="150" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Left" />
+                        <TextBox x:Name="TextBox_pol" Grid.Row="1" Grid.Column="2" Width="150" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Left" />
+                        <TextBox x:Name="TextBox_telefon" Grid.Row="1" Grid.Column="3" Width="150" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Left" />
+                        <TextBox x:Name="TextBox_drzavljanstvo" Grid.Row="1" Grid.Column="4" Width="150" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Left" />
+                        <TextBox x:Name="TextBox_pasos" Grid.Row="1" Grid.Column="5" Width="150" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Left" />
+                        <TextBox x:Name="TextBox_licna" Grid.Row="1" Grid.Column="6" Width="150" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Left" />
                     </Grid>
 
                     <DataGrid Grid.Row="3" CanUserReorderColumns="False" CanUserResizeColumns="False" Margin="10">
@@ -185,7 +185,57 @@
             </TabItem>
 
             <TabItem Header="Rezervacije">
-                <TextBlock Text="Reservations Content" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="24" Foreground="Black"/>
+                <Grid Margin="20">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+                        <Button x:Name="Button_dodajRez" Content="Dodaj" Width="100" Margin="5" Style="{StaticResource ModernButton}" />
+                        <Button x:Name="Button_pretraziRez" Content="Pretraži" Width="100" Margin="5" Style="{StaticResource ModernButton}" />
+                        <Button x:Name="Button_izmeniRez" Content="Izmeni" Width="100" Margin="5" Style="{StaticResource ModernButton}" />
+                        <Button x:Name="Button_obrisiRez" Content="Obriši" Width="100" Margin="5" Style="{StaticResource ModernButton}" />
+                    </StackPanel>
+
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <TextBlock >ID gosta</TextBlock>
+                        <TextBlock Grid.Column="1" >ID sobe</TextBlock>
+                        <TextBlock Grid.Column="2">Početak rezervacije</TextBlock>
+                        <TextBlock Grid.Column="3">Kraj rezervacije</TextBlock>
+                        <TextBlock Grid.Column="4">Ukupna cena</TextBlock>
+
+                        <TextBox x:Name="TextBox_idOsobe" Grid.Row="1" Width="150" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Left" />
+                        <TextBox x:Name="TextBox_idSobe" Grid.Row="1" Grid.Column="1" Width="150" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Left" />
+                        <DatePicker x:Name="DatePicker_pocetakRez" Grid.Row="1" Grid.Column="2" Width="150" HorizontalAlignment="Left" Margin="15" />
+                        <DatePicker x:Name="DatePicker_krajRez" Grid.Row="1" Grid.Column="3" Width="150" HorizontalAlignment="Left" Margin="15" />
+                        <TextBlock x:Name="TextBlock_ukupnaCena" Grid.Row="1" Grid.Column="4" Width="150" HorizontalAlignment="Left" Foreground="Black" VerticalAlignment="Center">izracunato</TextBlock>
+                    </Grid>
+
+                    <DataGrid Grid.Row="3" CanUserReorderColumns="False" CanUserResizeColumns="False" Margin="10">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="ID"  Width="*" />
+                            <DataGridTextColumn Header="ID gosta"  Width="*" />
+                            <DataGridTextColumn Header="ID sobe"  Width="*" />
+                            <DataGridTextColumn Header="Početak rezervacije"  Width="*" />
+                            <DataGridTextColumn Header="Kraj rezervacije"  Width="*" />
+                            <DataGridTextColumn Header="Ukupna cena"  Width="*" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </Grid>
             </TabItem>
 
             <TabItem Header="Uredi zaposlenog">
